--- a/control/plots/compare_control_vel_l-1.0_mp-0.2.tex
+++ b/control/plots/compare_control_vel_l-1.0_mp-0.2.tex
@@ -1,4 +1,4 @@
-\begin{subfigure}[t]{\columnwidth}
+\begin{figure}[htb]
     \centering
     \begin{tikzpicture}
         \begin{axis}[            
@@ -7,7 +7,7 @@
             x unit = \si{\second},
             y unit = \si{\metre/\second},
             xmin = 0,   xmax = 16,
-            ymin = -0.1,  ymax = 2.7,
+            ymin = -0.1,  ymax = 2.5,
             grid = major,
             legend cell align = left,
             legend pos = south east,
@@ -52,4 +52,4 @@
     ($l =$~\SI{1}{\meter}, $m_p =$~\SI{0.2}{\kilo\gram})}
     \label{fig:compare_control_vel_l1}
     
-\end{subfigure}
+\end{figure}
