--- a/control/plots/compare_control_vel_l-0.5_mp-0.1.tex
+++ b/control/plots/compare_control_vel_l-0.5_mp-0.1.tex
@@ -1,4 +1,4 @@
-\begin{subfigure}[t]{\columnwidth}
+\begin{figure}[htb]
     \centering
     \begin{tikzpicture}
         \begin{axis}[            
@@ -7,7 +7,7 @@
             x unit = \si{\second},
             y unit = \si{\metre/\second},
             xmin = 0,   xmax = 16,
-            ymin = -0.1,  ymax = 2.7,
+            ymin = -0.1,  ymax = 2.5,
             grid = major,
             legend cell align = left,
             legend pos = south east,
@@ -51,4 +51,4 @@
     \caption{Velocity step response comparison of different controllers
     ($l =$~\SI{0.5}{\meter}, $m_p =$~\SI{0.1}{\kilo\gram})}
     \label{fig:compare_control_vel_l05}
-\end{subfigure}
+\end{figure}
