Added MPC plot for dynamic payload with correct tuning and prediction vs actual plot

--- a/control/control.tex
+++ b/control/control.tex
@@ -217,9 +217,15 @@
             vel control
 
             \input{control/plots/compare_control_theta_dynamic.tex}
-
+            
             \paragraph
             theta control
+
+            \input{control/plots/mpc_prediction_vs_actual.tex}
+
+            \paragraph
+            Prediction vs actual
+
 
             \begin{itemize}
                 \item subplot prediction of data driven model. subplot prediction of white-box model
