--- a/control/plots/compare_control_vel_dynamic.tex
+++ b/control/plots/compare_control_vel_dynamic.tex
@@ -37,7 +37,7 @@
 
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = time, y = vel, col sep = comma] 
-        {control/csv/compare_control_mpc_Simulink_double_pend_m1-0.2_m2-0.1_l1-0.5_l2-0.6_MPC_vel_steps_tune_scale_0.7_slow_minimal_oscillations.csv};
+        {control/csv/compare_control_mpc_Simulink_double_pend_m1-0.2_m2-0.1_l1-0.5_l2-0.6_MPC_vel_steps_tune_scale_0.7.csv};
         \addlegendentry{MPC}
 
         \addplot+[mark = none, style = dashed, ultra thick] 
