--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -203,7 +203,7 @@
 \input{conclusion/conclusion.tex}
 
 % Bibliography
-\bibliography{Thesis.bib}
+\bibliography{bibtex/Thesis.bib}
 
 % End matter
 \appendix
